Fixed broken homepage on mobile

--- a/src/components/nav_dark.module.css
+++ b/src/components/nav_dark.module.css
@@ -47,5 +47,9 @@
 @media screen and (min-device-width: 320px) and (max-device-width: 600px) {
 	.breadcrumbs {
 		display: none;
-	}
+  }
+  
+  .logo_box p {
+    display: none;
+  }
 }
